fix spacing on small screens

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -41,8 +41,9 @@
 
 @media screen and (max-width: 720px) {
   .mc_button {
-    padding-top: 3px;
-    padding-bottom: 7px;
+    padding: 0;
+    padding-top: 4px;
+    padding-bottom: 4px;
     margin-top: 3px;
   }
 
